vlib/v/checker/tests/nil_assign_to_option_err.vv
// Example 1
struct Foo {
mut:
	name ?&string
}

fn main() {
	_ := Foo{
		name: unsafe { nil }
	}

	mut foo := Foo{}
	unsafe {
		foo.name = nil
	}
}
